@@ -36,6 +36,7 @@ Version 1.6.9.1
 	- Replace PROTO_YAHOOGAMES by PROTO_ALLOCINE
 	- Replace PROTO_COTENDO by PROTO_FRANCETVINFO
 	- Replace PROTO_VOXTEL by PROTO_STACKPATH
+	- Replace PROTO_GCM by PROTO_TWITCH
 
 
 ## Version 1.6.9.0
